--- a/Practica4/css/style.css
+++ b/Practica4/css/style.css
@@ -3,9 +3,26 @@ html{
     font-family: 'Phudu', cursive;
 }
 
+img{
+  max-width: 100%;
+}
+
+iframe{
+max-width: 100%;
+}
+
+table{
+  width: 100%;
+}
+
 .grid {
     display: grid;
     grid-template-columns: 100%;
+  }
+
+  .img-table {
+    width: 200px;
+    display: block;
   }
 
   .img-kenny{
@@ -15,4 +32,8 @@ html{
   width: 200px;
   height: 200px;
   border-radius: 50%;
+  }
+
+  .text-center{
+    text-align: center;
   }
